--- a/notebook/sandbox.ipynb
+++ b/notebook/sandbox.ipynb
@@ -11,22 +11,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Configuration file successfully loaded\n"
+      "Configuration file successfully loaded\n",
+      "Configuration file successfully loaded\n",
+      "Sending message --->>> to anton.tushev@primetals.com\n",
+      "{}\n",
+      "Sending message --->>> to anton.tushev@primetals.com\n",
+      "{}\n"
      ]
     }
    ],
    "source": [
     "import smtplib\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.text import MIMEText\n",
+    "from jinja2 import Environment, FileSystemLoader\n",
+    "import time\n",
+    "\n",
+    "#for mail templates generator\n",
+    "file_loader = FileSystemLoader('templates')\n",
+    "env = Environment(loader=file_loader,autoescape=select_autoescape(['html', 'xml']))\n",
+    "\n",
+    "path_config = \"../internal/config.txt\"\n",
+    "path_config_pt = \"../internal/config_pt.txt\"\n",
+    "path_config_gl = \"../internal/config_gl.txt\"\n",
     "\n",
     "#####options importing script\n",
-    "def get_options(file=\"../internal/maillogin.txt\"):\n",
+    "def get_options(file=path_config,convert_bool=False):\n",
     "    out = {}\n",
     "    with open(file, 'r', encoding='utf-8') as infile:\n",
     "        for line in infile:\n",
@@ -38,122 +95,80 @@
     "                    pass\n",
     "            except IndexError:\n",
     "                pass\n",
+    "        if convert_bool:\n",
+    "            out={k:v in ['1'] for k,v in out.items()}\n",
     "        print(\"Configuration file successfully loaded\")\n",
     "    return out\n",
+    "\n",
     "#####options importing script\n",
-    "global_options = get_options()\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Configuration file successfully loaded\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 99] Cannot assign requested address",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-aae4fcfa6a3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m##main server connection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0msmtpObj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msmtplib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSMTP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'smtp.gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m587\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0msmtpObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstarttls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/smtplib.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, host, port, local_hostname, timeout, source_address)\u001b[0m\n\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 251\u001b[0;31m             \u001b[0;34m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    252\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m220\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mSMTPConnectError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/smtplib.py\u001b[0m in \u001b[0;36mconnect\u001b[0;34m(self, host, port, source_address)\u001b[0m\n\u001b[1;32m    333\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebuglevel\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    334\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_print_debug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'connect:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 335\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msock\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_socket\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    336\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    337\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetreply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/smtplib.py\u001b[0m in \u001b[0;36m_get_socket\u001b[0;34m(self, host, port, timeout)\u001b[0m\n\u001b[1;32m    304\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_print_debug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'connect: to'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msource_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m         return socket.create_connection((host, port), timeout,\n\u001b[0;32m--> 306\u001b[0;31m                                         self.source_address)\n\u001b[0m\u001b[1;32m    307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'localhost'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource_address\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/socket.py\u001b[0m in \u001b[0;36mcreate_connection\u001b[0;34m(address, timeout, source_address)\u001b[0m\n\u001b[1;32m    709\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    710\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0merr\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 711\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    712\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    713\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"getaddrinfo returns an empty list\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.5/socket.py\u001b[0m in \u001b[0;36mcreate_connection\u001b[0;34m(address, timeout, source_address)\u001b[0m\n\u001b[1;32m    700\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0msource_address\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m                 \u001b[0msock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m             \u001b[0msock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    703\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msock\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 99] Cannot assign requested address"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "##main server connection\n",
-    "smtpObj = smtplib.SMTP('smtp.gmail.com', 587)\n",
-    "smtpObj.starttls()\n",
-    "\n",
-    "if global_options.get('accountname') and global_options.get('accounpass'):\n",
-    "    smtpObj.login(global_options.get('accountname'),global_options.get('accounpass'))\n",
+    "global_options = get_options(path_config,convert_bool=True)\n",
+    "if global_options['location_pmt']:\n",
+    "    global_options.update(get_options(path_config_pt))\n",
     "else:\n",
-    "    print('Credentials missing')"
+    "    global_options.update(get_options(path_config_gl))\n",
+    "    \n",
+    "#for comfortability\n",
+    "global_options['smtp_port']=int(global_options['smtp_port'])\n",
+    "\n",
+    "\n",
+    "##Send mail by smtp server\n",
+    "def smtp_send_mail(mail_from,mail_to,message,subject=\"\",fromaddr=global_options['smtp_accname'],toaddr=\"\",cc=\"\"):\n",
+    "    #prepare message\n",
+    "    print('Sending message --->>> to %s'%mail_to)\n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['From'] = fromaddr\n",
+    "    msg['To'] = toaddr\n",
+    "    msg['Cc'] = ', '.join(cc)\n",
+    "    msgHtml = MIMEText(message, 'html')\n",
+    "    msg.attach(msgHtml)\n",
+    "    msg['Subject'] = subject\n",
+    "    #sending message\n",
+    "    mailserver = smtplib.SMTP(global_options['smtp_server'],global_options['smtp_port'])\n",
+    "    mailserver.ehlo()\n",
+    "    mailserver.starttls()\n",
+    "    mailserver.login(global_options['smtp_accname'], global_options['smtp_accpass'])\n",
+    "    print(mailserver.sendmail(mail_from,mail_to,msg.as_string()))\n",
+    "    mailserver.quit()\n",
+    "\n",
+    "#generating mail template\n",
+    "template = env.get_template('index.html')\n",
+    "#msg = template.render(tmp_var='Generated txt')  \n",
+    " \n",
+    "#smtp_send_mail('pmtseverinfo@gmail.com','tunmustard@gmail.com',msg,'Next message ','pmtseverinfo@gmail.com','tunmustard@gmail.com',['tunmustard@gmail.com'])\n",
+    "\n",
+    "for k in range(2):\n",
+    "    msg = template.render(tmp_var=time.ctime())\n",
+    "    time.sleep(2)\n",
+    "    smtp_send_mail(global_options['smtp_accname'],global_options['smtp_accname'],msg,'Next message ',global_options['smtp_accname'],'tunmustard@gmail.com',['tunmustard@gmail.com'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "'a'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smtpObj.sendmail(global_options.get('accountname'),\"tunmustard@gmail.com\",\"Test message from app\")"
+    "\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##main server connection\n",
-    "smtpObj = smtplib.SMTP('eas.primetals.com', 443)\n",
-    "smtpObj.starttls()\n",
-    "\n",
-    "if global_options.get('accountname') and global_options.get('accounpass'):\n",
-    "    smtpObj.login(global_options.get('accountname'),global_options.get('accounpass'))\n",
-    "else:\n",
-    "    print('Credentials missing')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(221, b'2.0.0 Service closing transmission channel')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import smtplib\n",
-    "\n",
-    "#ailserver = smtplib.SMTP_SSL('eas.primetals.com', 443)\n",
-    "mailserver = smtplib.SMTP('RUMOWK001MSX.pmt.primetals.net',587)\n",
-    "mailserver.ehlo()\n",
-    "mailserver.starttls()\n",
-    "mailserver.login('', '')\n",
-    "mailserver.sendmail('anton.tushev@primetals.com','anton.tushev@primetals.com','email from app')\n",
-    "mailserver.quit()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
